2005-06-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpenumlabel.[ch]: added new widget GimpEnumLabel.

	* libgimpwidgets/gimppropwidgets.[ch]: added
	gimp_prop_enum_label_new().

	* libgimpwidgets/gimpwidgets.def: updated.

	* modules/cdisplay_lcms.c (cdisplay_lcms_configure): started to
	add a view on the current color managment configuration.

2005-06-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/Makefile.am: build all libraries with no-undefined.
	Ignore doc stuff for now, since it's ancient and needs to be massively
	revised.

	* configure.in: don't generate plug-ins/pygimp/doc/Makefile

2005-06-24  Manish Singh  <yosh@gimp.org>

	* acinclude.m4: split out into separate files...

	* m4macros/alsa.m4
	* m4macros/gimpprint.m4
	* m4macros/gtk-doc.m4
	* m4macros/pythondev.m4: ... and put them here.

	* m4macros/Makefile.am: dist the above files.

2005-06-24  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts/text-circle.scm: Incorporated changes
	made by Daniel P. Stasinski in his text-circle3.scm script. Letters
	are now placed properly for both positive and negative fill angles.
	Last(?) fix for bug #144588.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added a mnemonic.

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_new): embed the button in an
	event-box if the param_spec provides a blurb to be used as a
	tooltip.

	* libgimpconfig/gimpcolorconfig.c: improved blurbs.

2005-06-24  Manish Singh  <yosh@gimp.org>

	* libgimpcolor/gimpcolor.def: add gimp_rgba_parse_css

2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c
	* app/actions/layers-actions.c
	* app/dialogs/image-properties-dialog.c: use GTK_STOCK_PROPERTIES
	as stock icon for property menu items and dialogs.

2005-06-24  Sven Neumann  <sven@gimp.org>
